--- a/res/layout/activity_export_identity.xml
+++ b/res/layout/activity_export_identity.xml
@@ -33,22 +33,24 @@
             android:layout_marginBottom="10dp"
             android:orientation="vertical" >
 
-      <!--       <TextView
+            <!--
+                 <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:gravity="center_horizontal"
-                android:text="@string/backup_local_location_label" /> -->
+                android:text="@string/backup_local_location_label" />
+            -->
 
             <TextView
                 android:id="@+id/backupLocalLocation"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
+                android:layout_marginTop="10dp"
                 android:gravity="center" />
         </LinearLayout>
 
@@ -63,8 +65,10 @@
         <Button
             android:id="@+id/bExportSd"
             style="@style/Widget.Sherlock.ActionButton"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
             android:text="@string/export_sd"
             android:textColor="@color/surespotBlue"
             android:textSize="16dp" >
@@ -128,8 +132,10 @@
         <Button
             android:id="@+id/bBackupDrive"
             style="@style/Widget.Sherlock.ActionButton"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
             android:text="@string/backup_drive_button"
             android:textColor="@color/surespotBlue"
             android:textSize="16dp" >
