--- a/res/layout/activity_manage_keys.xml
+++ b/res/layout/activity_manage_keys.xml
@@ -40,9 +40,20 @@
 
     <Button
         android:id="@+id/bRollKeys"
-        android:layout_width="fill_parent"
+        style="@style/Widget.Sherlock.ActionButton"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/regenerate_keys" >
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:text="@string/regenerate_keys"
+        android:textColor="@color/surespotBlue" >
     </Button>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:background="#aaa" />
 
 </LinearLayout>
