--- a/res/layout/activity_change_password.xml
+++ b/res/layout/activity_change_password.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="10dip"
+        android:padding="10dp"
         tools:context=".ChangePasswordActivity" >
 
         <TextView
@@ -24,7 +24,7 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" 
+            android:layout_height="wrap_content"
             android:text="@string/select_identity" />
 
         <Spinner
@@ -82,10 +82,21 @@
 
         <Button
             android:id="@+id/bChangePassword"
-            android:layout_width="fill_parent"
+            style="@style/Widget.Sherlock.ActionButton"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/change_password" >
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:text="@string/change_password"
+            android:textColor="@color/surespotBlue" >
         </Button>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:background="#aaa" />
     </LinearLayout>
 
 </ScrollView>
