--- a/res/layout/activity_delete_identity.xml
+++ b/res/layout/activity_delete_identity.xml
@@ -5,12 +5,12 @@
     android:orientation="vertical"
     android:padding="10dp"
     tools:context=".DeleteIdentityActivity" >
-    
-     <TextView
-        android:text="@string/delete_identity_message_warning"
+
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp" />
+        android:layout_marginBottom="10dp"
+        android:text="@string/delete_identity_message_warning" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -33,10 +33,21 @@
 
     <Button
         android:id="@+id/bDeleteIdentity"
+        style="@style/Widget.Sherlock.ActionButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/delete_identity"
+        android:textColor="@color/surespotBlue"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:textSize="16dp" >
     </Button>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"        
+        android:background="#aaa" />
 
 </LinearLayout>
