--- a/res/layout/activity_signup.xml
+++ b/res/layout/activity_signup.xml
@@ -13,7 +13,8 @@
         <TextView
             android:id="@+id/tvSignupHelp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:layout_marginBottom="10dp" />
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp" />
 
         <TextView
             android:id="@+id/textView2"
@@ -62,10 +63,21 @@
 
         <Button
             android:id="@+id/bSignup"
+            style="@style/Widget.Sherlock.ActionButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dip"
-            android:text="@string/create_identity" />
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
+            android:text="@string/create_identity"
+            android:textColor="@color/surespotBlue" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"            
+            android:background="#aaa" />
     </LinearLayout>
 
 </ScrollView>
