--- a/res/layout/activity_import_identity.xml
+++ b/res/layout/activity_import_identity.xml
@@ -9,8 +9,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
-        android:gravity="center_horizontal"
         android:orientation="vertical" >
 
         <RadioButton
@@ -122,7 +123,10 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:ellipsize="end"
                     android:gravity="center"
+                    android:maxLines="1"
+                    android:singleLine="true"
                     android:text="@string/no_google_account_selected"
                     android:textSize="16sp" />
 
