--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -65,7 +65,7 @@
             android:id="@+id/etInvite"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:imeActionLabel="invite"
+            android:imeActionLabel="@string/invite"
             android:imeOptions="actionDone"
             android:inputType="textNoSuggestions|textVisiblePassword"
             android:maxHeight="150dp"
@@ -77,7 +77,7 @@
             android:id="@+id/etMessage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:imeActionLabel="send"
+            android:imeActionLabel="@string/send"
             android:imeOptions="actionSend"
             android:inputType="textMultiLine"
             android:maxHeight="150dp"
