--- a/res/layout/fingerprint_item_them.xml
+++ b/res/layout/fingerprint_item_them.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:descendantFocusability="blocksDescendants"
     android:orientation="vertical" >
 
     <LinearLayout
@@ -15,7 +16,7 @@
             android:layout_height="wrap_content"
             android:maxLines="1"
             android:paddingRight="5dp"
-            android:text="version"
+            android:text="@string/version"
             android:textSize="11sp" />
 
         <TextView
@@ -31,7 +32,7 @@
             android:layout_height="wrap_content"
             android:maxLines="1"
             android:paddingRight="5dp"
-            android:text="received"
+            android:text="@string/received"
             android:textSize="11sp" />
 
         <TextView
@@ -45,6 +46,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal" >
+        
+        
 
         <LinearLayout
             android:layout_width="0dp"
@@ -99,7 +102,7 @@
                 android:gravity="center" >
 
                 <com.twofours.surespot.ui.ExpandableHeightGridView
-                    android:id="@+id/dsaFingerprint"
+                    android:id="@+id/dsaFingerprint"                    
                     android:layout_width="80dp"
                     android:layout_height="wrap_content"
                     android:columnWidth="20dp"
