qr and image scaling based on display dpi

--- a/res/layout/message_list_item_us.xml
+++ b/res/layout/message_list_item_us.xml
@@ -93,6 +93,7 @@
             android:layout_marginLeft="2dp"
             android:layout_marginRight="2sp"
             android:adjustViewBounds="true"
+            android:scaleType="fitCenter"
             android:visibility="gone" />
 
         <TextView
