--- a/res/layout/message_list_item_them.xml
+++ b/res/layout/message_list_item_them.xml
@@ -84,6 +84,7 @@
             android:layout_marginBottom="2dp"
             android:layout_marginLeft="2dp"
             android:layout_marginRight="2dp"
+            android:scaleType="fitCenter"
             android:adjustViewBounds="true"
             android:visibility="gone" />
 
