--- a/res/layout/message_list_item_us.xml
+++ b/res/layout/message_list_item_us.xml
@@ -88,12 +88,13 @@
         <ImageView
             android:id="@+id/messageImage"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginBottom="2dp"
             android:layout_marginLeft="2dp"
             android:layout_marginRight="2sp"
-            android:adjustViewBounds="true"
-            android:scaleType="fitCenter"
+            android:adjustViewBounds="false"
+            android:scaleType="centerCrop"
+            android:layout_gravity="left"            
             android:visibility="gone" />
 
         <TextView
