fix fingerprint styling on GB and below

--- a/res/layout/fingerprint_item_them.xml
+++ b/res/layout/fingerprint_item_them.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:descendantFocusability="blocksDescendants"
+    android:layout_height="wrap_content"    
     android:orientation="vertical" >
 
     <LinearLayout
@@ -46,8 +45,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal" >
-        
-        
 
         <LinearLayout
             android:layout_width="0dp"
@@ -59,8 +56,9 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
                 android:gravity="center"
-                android:text="DH"
+                android:text="DH"                
                 android:textSize="10sp"
                 android:textStyle="bold" />
 
@@ -71,10 +69,11 @@
 
                 <com.twofours.surespot.ui.ExpandableHeightGridView
                     android:id="@+id/dhFingerprint"
-                    android:layout_width="80dp"
+                    android:layout_width="90dp"
                     android:layout_height="wrap_content"
                     android:columnWidth="20dp"
                     android:gravity="center"
+                    android:listSelector="@android:color/transparent"
                     android:numColumns="4"
                     android:stretchMode="none" />
             </LinearLayout>
@@ -91,8 +90,9 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
                 android:gravity="center"
-                android:text="DSA"
+                android:text="DSA"                
                 android:textSize="10sp"
                 android:textStyle="bold" />
 
@@ -102,11 +102,12 @@
                 android:gravity="center" >
 
                 <com.twofours.surespot.ui.ExpandableHeightGridView
-                    android:id="@+id/dsaFingerprint"                    
-                    android:layout_width="80dp"
+                    android:id="@+id/dsaFingerprint"
+                    android:layout_width="90dp"
                     android:layout_height="wrap_content"
                     android:columnWidth="20dp"
                     android:gravity="center"
+                    android:listSelector="@android:color/transparent"
                     android:numColumns="4"
                     android:stretchMode="none" />
             </LinearLayout>
