--- a/res/layout/fingerprint_layout.xml
+++ b/res/layout/fingerprint_layout.xml
@@ -28,6 +28,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
+            android:textColor="@android:color/black"
             android:textSize="12sp"
             android:textStyle="bold" >
         </TextView>
@@ -45,8 +46,8 @@
             android:layout_height="80dp"
             android:gravity="center"
             android:text="@string/loading"
-            android:textSize="12sp"
-            android:textStyle="bold"
+            android:textColor="@android:color/black"
+            android:textSize="12sp"            
             android:visibility="gone" >
         </TextView>
 
@@ -55,6 +56,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
+            android:textColor="@android:color/black"
             android:textSize="12sp"
             android:textStyle="bold" >
         </TextView>
@@ -72,8 +74,8 @@
             android:layout_height="80dp"
             android:gravity="center"
             android:text="@string/loading"
-            android:textSize="12sp"
-            android:textStyle="bold"
+            android:textColor="@android:color/black"
+            android:textSize="12sp"            
             android:visibility="gone" >
         </TextView>
     </LinearLayout>
