--- a/res/layout/dialog_help.xml
+++ b/res/layout/dialog_help.xml
@@ -107,6 +107,15 @@
             android:layout_marginRight="10dp"
             android:layout_marginTop="5dp"
             android:text="@string/help_messageHistory" />
+
+        <TextView
+            android:id="@+id/helpAgreement"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:visibility="gone" />
     </LinearLayout>
 
 </ScrollView>
