custom notification for system notifications on devices that do not support "big" style

--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -17,8 +17,17 @@
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
 
-    <style name="Divider">        
+    <style name="Divider">
         <item name="android:background">?android:attr/listDivider</item>
+    </style>
+
+    <style name="NotificationTitle">
+        <item name="android:textColor">?android:attr/textColorPrimaryInverse</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="NotificationText">
+        <item name="android:textColor">?android:attr/textColorPrimaryInverse</item>
     </style>
 
 </resources>
